# Proto-Socket-Communiction-CI-Implementation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  index.html  md_README.html  pages.html
.github/workflows/: doxygen-gh-pages.yml
app/: client_main.cpp  server_main.cpp
d0/d30/: md_README.html
include/: client_driver.h  server_driver.h
search/: pages_0.js
src/: client_driver.cpp  server_driver.cpp
